fixed facebook scrollbar issue

--- a/app/assets/stylesheets/page.css.sass
+++ b/app/assets/stylesheets/page.css.sass
@@ -169,6 +169,9 @@ footer
 #fb_like, #twitter_like
   height: 25px
 
+#fb-root div
+  overflow: hidden !important
+
 #map_canvas
   float: right
   margin-left: 10px
